Fixed case horizontal scroll

--- a/src/styles/components/cases.scss
+++ b/src/styles/components/cases.scss
@@ -53,7 +53,7 @@
         background: $black;
         z-index: 1;
         transform: translateX(-853.3px);
-        transition: transform 0.2s ease-in-out;
+        transition: transform 0.1s ease-in-out;
         cursor: pointer;
         &:hover {
           .case-image {
